--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/ONtrend-logo.png" />
      <link href="/src/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>onTrend</title>
+    <title>ONtrend</title>
   </head>
   <body>
     <div id="root"></div>
